Application set in local storage that it’s registered for push or not … Application set in local storage that push notification are enabled or not. All pushs notification are stored in local storage, it’s possible to display them or to remove them. Addition of media plugin and personalized sound

--- a/config/config.json
+++ b/config/config.json
@@ -9,5 +9,5 @@
 		"prefix": "/css",
 		"debug": true
 	},
-	"plugins": ["../plugins/aerogear-pushplugin-cordova-0.0.3"]
+	"plugins": ["../plugins/aerogear-pushplugin-cordova-0.0.3", "org.apache.cordova.media"]
 }
