Socket io implementation
add plugin for device informations
add plugin for sockets
add socket io libs
add backbone-super.min.js

The application send an receipt

--- a/config/config.json
+++ b/config/config.json
@@ -12,8 +12,7 @@
 	"plugins": [
 		"../plugins/aerogear-pushplugin-cordova-0.0.3",
 		"org.apache.cordova.media",
-		"https://github.com/anismiles/websocket-android-phonegap",
-		"https://github.com/remy/PhoneGap-Plugin-WebSocket",
-		"org.apache.cordova.device"
+		"org.apache.cordova.device",
+		"https://github.com/mkuklis/phonegap-websocket"
 	]
 }
