--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-	"name": "uMobile",
-	"description": "uMobile",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node app"
-	},
-	"dependencies": {
-		"grunt": "0.4.2",
-		"grunt-contrib": "0.9.0",
-		"grunt-targethtml": "0.2.6",
-		"grunt-exec": "0.4.5",
-		"nconf": "0.6.9",
-		"express": "3.4.8",
-		"hogan.js": "2.0.0",
-		"hogan-express": "0.5.2",
-		"less-middleware": "0.1.15",
-		"phonegap": "3.3.0-0.19.6",
-		"grunt-phonegap": "0.10.1"
-	}
+  "name": "uMobile",
+  "description": "uMobile",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app"
+  },
+  "dependencies": {
+    "grunt": "0.4.2",
+    "grunt-contrib": "0.9.0",
+    "grunt-targethtml": "0.2.6",
+    "grunt-exec": "0.4.5",
+    "nconf": "0.6.9",
+    "express": "^3.4.8",
+    "hogan.js": "2.0.0",
+    "hogan-express": "0.5.2",
+    "less-middleware": "0.1.15",
+    "phonegap": "3.3.0-0.19.6",
+    "grunt-phonegap": "0.10.1",
+    "socket.io": "^1.0.3"
+  }
 }
